Added new supported countries
<select id="zip-c">
        <optgroup label="North America">
            <option value="US">United States</option>
            <option value="CA">Canada</option>
            <option value="MX">Mexico</option>
        </optgroup>
        <optgroup label="South America">
            <option value="BR">Brazil</option>
        </optgroup>
        <optgroup label="Europe">
            <option value="GB">United Kingdom</option>
            <option value="FR">France</option>
            <option value="ES">Spain</option>
        </optgroup>
        <optgroup label="Asia">
            <option value="IN">India</option>
            <option value="JP">Japan</option>
            <option value="ID">Indonesia</option>
        </optgroup>
        <optgroup label="Other">
            <option value="RU">Russia</option>
        </optgroup>
    </select>

--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
             <option value="CA">Canada</option>
             <option value="MX">Mexico</option>
         </optgroup>
+        <optgroup label="South America">
+            <option value="BR">Brazil</option>
+        </optgroup>
         <optgroup label="Europe">
             <option value="GB">United Kingdom</option>
+            <option value="FR">France</option>
+            <option value="ES">Spain</option>
         </optgroup>
         <optgroup label="Asia">
             <option value="IN">India</option>
             <option value="JP">Japan</option>
+            <option value="ID">Indonesia</option>
+        </optgroup>
+        <optgroup label="Other">
+            <option value="RU">Russia</option>
         </optgroup>
     </select>
     <select id="unit-b">
