--- a/settings/delete.html
+++ b/settings/delete.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Delete your data</h1>
     <p>This will delete all location data stored on this device.</p>
-    <form action="delcn.html" method="post">
+    <form action="delcn.html" method="get">
         <div class="g-recaptcha" data-sitekey="6LfB4ckfAAAAAJH3qOotGiFW1Munvvy_o9hC_8AU"></div>
         <input type="submit" value="Conform">
     </form>
