--- a/settings/delete.html
+++ b/settings/delete.html
@@ -12,7 +12,7 @@
     <p>This will delete all location data stored on this device.</p>
     <form action="delcn.html" method="get">
         <div class="g-recaptcha" data-sitekey="6LfB4ckfAAAAAJH3qOotGiFW1Munvvy_o9hC_8AU"></div>
-        <input type="submit" value="Conform">
+        <input type="submit" value="Confirm">
     </form>
     <!--<button onclick="del()">continue</button>-->
     <script>
