--- a/settings/index.html
+++ b/settings/index.html
@@ -51,6 +51,7 @@ body {
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search..." title="Type in a name">
 
 <ul id="myUL">
+    <li><a href="unit">Change unit</a></li>
     <li><a href="https://github.com/jacobd082/wx/commits/main">See changelog</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data</a></li>
