--- a/index.html
+++ b/index.html
@@ -1,150 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Settings</title>
-<style>
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-#myInput {
-  background-image: url('/css/searchicon.png');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 100%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
-
-#myUL {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myUL li a {
-  border: 1px solid #ddd;
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee;
-}
-body {
-    font-family: sans-serif;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Weather</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="Logo.png">
+    <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
 </head>
 <body>
-
-<h2>Settings</h2>
-
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search..." title="Type in a name">
-
-<ul id="myUL">
-    <li><a href="unit">Change unit</a></li>
-    <li><a>Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
-    <li><a href="https://github.com/jacobd082/wx/commits/main">See changelog</a></li>
-    <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
-    <li><a href="delete">Delete your data</a></li>
-</ul>
-<script>
-
-  document.getElementById("icon").checked=(Boolean(Number(localStorage.getItem("icon-show"))))
-  function setIcon() {
-    localStorage.setItem("icon-show",Number(document.getElementById("icon").checked))
-  }
-  </script>
-<script>
-function myFunction() {
-    var input, filter, ul, li, a, i, txtValue;
-    input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
-    li = ul.getElementsByTagName("li");
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            li[i].style.display = "";
-        } else {
-            li[i].style.display = "none";
-        }
-    }
-}
-</script>
-
+    <img src="Logo.png" width="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
+    <center>
+    <h1>Weather is difficult... We get it!</h1>
+    <p>That's why I made a weather website that makes it easy!</p>
+    <p>This website will need your location to continue. Don't worry! It's not sent anywhere!</p>
+    <select id="unit-a">
+        <option value="imperial">F</option>
+        <option value="metric">C</option>
+    </select>
+    <button onclick="setGPS()">Use my current location</button>
+    <div>
+        <p>Or you can enter your ZIP code:</p>
+        <input id="zip" placeholder="ZIP code">
+        <select id="zip-c">
+            <optgroup label="North America">
+                <option value="US">United States</option>
+                <option value="CA">Canada</option>
+                <option value="MX">Mexico</option>
+            </optgroup>
+            <optgroup label="South America">
+                <option value="BR">Brazil</option>
+            </optgroup>
+            <optgroup label="Europe">
+                <option value="GB">United Kingdom</option>
+                <option value="FR">France</option>
+                <option value="ES">Spain</option>
+            </optgroup>
+            <optgroup label="Asia">
+                <option value="IN">India</option>
+                <option value="JP">Japan</option>
+                <option value="ID">Indonesia</option>
+            </optgroup>
+            <optgroup label="Other">
+                <option value="RU">Russia</option>
+            </optgroup>
+        </select>
+        <select id="unit-b">
+            <option value="imperial">F</option>
+            <option value="metric">C</option>
+        </select>
+        <button onclick="setZIP()">Next</button>
+        <div id="zipr"></div>
+    </div>
+    <br>
+    <p>Project by <a href="https://jacobdrath.co">Jacob Drath</a></p>
+    </center>
+    <script defer src="main.js"></script>
 </body>
+
 </html>
