--- a/settings/index.html
+++ b/settings/index.html
@@ -4,6 +4,69 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Settings</title>
 <style>
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -52,11 +115,18 @@ body {
 
 <ul id="myUL">
     <li><a href="unit">Change unit</a></li>
+    <li><a>Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
     <li><a href="https://github.com/jacobd082/wx/commits/main">See changelog</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data</a></li>
 </ul>
+<script>
 
+  document.getElementById("icon").checked=(Boolean(Number(localStorage.getItem("icon-show"))))
+  function setIcon() {
+    localStorage.setItem("icon-show",Number(document.getElementById("icon").checked))
+  }
+  </script>
 <script>
 function myFunction() {
     var input, filter, ul, li, a, i, txtValue;
