Added "Back" button for iOS

--- a/settings/unit.html
+++ b/settings/unit.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="https://wx.jacobdrath.co/Logo.png">
 </head>
 <body style="font-family: sans-serif;">
+
+<a href="javascript:history.back()">< Back</a>
     <h1>Change Unit of temperature</h1>
     <select id="unit">
         <option value="imperial">F</option>
