--- a/settings/delete.html
+++ b/settings/delete.html
@@ -8,6 +8,8 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
+
+<a href="javascript:history.back()">< Back</a>
     <h1>Delete your data</h1>
     <p>This will delete all location data stored on this device.</p>
     <form action="delcn.html" method="get">
