--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Simple Weather</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Logo.png">
+    <link rel="apple-touch-icon" href="Logo.png">
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
 </head>
 <body>
