re-did main screen for better readibility.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <img src="Logo.png" width="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
     <center>
-    <h1>Weather is difficult... We get it!</h1>
-    <p>That's why I made a weather website that makes it easy!</p>
-    <p>This website will need your location to continue. Don't worry! It's not sent anywhere!</p>
-    <select id="unit-a">
+    <h1>The simplest weather app.</h1>
+    <p>Simple Weather explains weather in simple terms that anyone can read!</p>
+    <p>You can start here in two ways. In order to provide your weather, this site will need your location. Your location is not sent anywhere but to get your weather. You can provide it by using your current location, or by entering your ZIP code.</p>
+    <select id="unit-a" style="display: none;">
         <option value="imperial">F</option>
         <option value="metric">C</option>
     </select>
@@ -47,7 +47,7 @@
                 <option value="RU">Russia</option>
             </optgroup>
         </select>
-        <select id="unit-b">
+        <select id="unit-b" style="display: none;">
             <option value="imperial">F</option>
             <option value="metric">C</option>
         </select>
