Readability fix on index

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </select>
     <button onclick="setGPS()">Use my current location</button>
     <div>
-        <p>Or you can enter your ZIP code:</p>
+        <p>Or enter your ZIP code:</p>
         <input id="zip" placeholder="ZIP code">
         <select id="zip-c">
             <optgroup label="North America">
