Added "Open Source" to settings.

--- a/settings/index.html
+++ b/settings/index.html
@@ -115,7 +115,7 @@ body {
 <ul id="myUL">
     <li><a href="unit">Change unit</a></li>
     <li><a>Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
-    <li><a href="https://github.com/jacobd082/wx/commits/main">See changelog</a></li>
+    <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data</a></li>
 </ul>
