--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Logo.png">
     <link rel="apple-touch-icon" href="Logo.png">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
 </head>
 <body>
@@ -57,6 +58,7 @@
     <br>
     <p>Project by <a href="https://jacobdrath.co">Jacob Drath</a></p>
     </center>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script defer src="main.js"></script>
 </body>
 
