--- a/settings/delcn.html
+++ b/settings/delcn.html
@@ -1,11 +1,9 @@
 <html>
-    <body>
-        <script>
-                    localStorage.clear()
-                    //alert("Data was deleted.")
-                    window.open("https://wx.jacobdrath.co", "_self")
-
-            
+  <body>
+    <script>
+      localStorage.clear();
+      //alert("Data was deleted.")
+      window.open("https://wx.jacobdrath.co", "_self");
     </script>
-    </body>
+  </body>
 </html>
