Revert "Formated all documents"
This reverts commit dba8f3036ddef67fd7616e2192bd4129ef5ad7ac.

--- a/settings/delcn.html
+++ b/settings/delcn.html
@@ -1,9 +1,11 @@
 <html>
-  <body>
-    <script>
-      localStorage.clear();
-      //alert("Data was deleted.")
-      window.open("https://wx.jacobdrath.co", "_self");
+    <body>
+        <script>
+                    localStorage.clear()
+                    //alert("Data was deleted.")
+                    window.open("https://wx.jacobdrath.co", "_self")
+
+            
     </script>
-  </body>
+    </body>
 </html>
