--- a/settings/delete.html
+++ b/settings/delete.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delete your data</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  </head>
-  <body>
-    <a href="javascript:history.back()">< Back</a>
+</head>
+<body>
+
+<a href="javascript:history.back()">< Back</a>
     <h1>Delete your data</h1>
     <p>This will delete all location data stored on this device.</p>
     <form action="delcn.html" method="get">
-      <div
-        class="g-recaptcha"
-        data-sitekey="6LfB4ckfAAAAAJH3qOotGiFW1Munvvy_o9hC_8AU"
-      ></div>
-      <input type="submit" value="Conform" />
+        <div class="g-recaptcha" data-sitekey="6LfB4ckfAAAAAJH3qOotGiFW1Munvvy_o9hC_8AU"></div>
+        <input type="submit" value="Conform">
     </form>
     <!--<button onclick="del()">continue</button>-->
     <script>
-      function del() {
-        localStorage.clear();
-        alert("Data was deleted.");
-        window.open("https://wx.jacobdrath.co", "_self");
-      }
+        function del() {
+            localStorage.clear()
+            alert("Data was deleted.")
+            window.open("https://wx.jacobdrath.co", "_self")
+        }
     </script>
-  </body>
+</body>
 </html>
