--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="apple-touch-icon" href="Logo.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-startup-image" href="Logo.png">
+    <meta name="apple-mobile-web-app-title" content="Weather">
+    <link rel="manifest" href="pwa-main.json">
 </head>
 <body>
     <img src="Logo.png" width="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
@@ -60,6 +64,13 @@
     </center>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script defer src="main.js"></script>
+    <script>
+        if (!navigator.serviceWorker.controller) {
+            navigator.serviceWorker.register("sw.js").then(function(reg) {
+                console.log("Service worker has been registered for scope: " + reg.scope);
+            });
+        }
+    </script>
 </body>
 
 </html>
