--- a/settings/index.html
+++ b/settings/index.html
@@ -14,7 +14,7 @@
 <ul id="myUL">
     <li><a href="unit">Change unit</a></li>
     <li><a>Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
-    <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
+    <li><a href="https://github.com/jacobd082/simple-wx">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data</a></li>
 </ul>
