--- a/settings/index.html
+++ b/settings/index.html
@@ -14,11 +14,24 @@
 <ul id="myUL">
     <li><a href="unit">Change unit</a></li>
     <li><a>Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
+    <li><a>Show temperature <input id="showTemp" type="checkbox" oninput="setTemp()"></a></li>
     <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data</a></li>
 </ul>
 <script>
+
+  document.getElementById("showTemp").checked=(Boolean(Number(localStorage.getItem("showTemp"))))
+  function setTemp() {
+    localStorage.setItem("showTemp",Number(document.getElementById("showTemp").checked))
+    Toastify({
+            text: "Saved!",
+            style: {
+              background: "linear-gradient(to right, #00b09b, #96c93d)",
+            },
+            gravity: "bottom"
+          }).showToast();
+  }
 
   document.getElementById("icon").checked=(Boolean(Number(localStorage.getItem("icon-show"))))
   function setIcon() {
