Added more info on ~/settings/delete.html

--- a/settings/delete.html
+++ b/settings/delete.html
@@ -11,7 +11,7 @@
 
 <a href="javascript:history.back()">< Back</a>
     <h1>Delete your data</h1>
-    <p>This will delete all location data stored on this device.</p>
+    <p>Deleting your date will remove all data that this website has stored. This will delete your settings and location. If you just want to reset your location, click "Reset" on the top of <a href="https://wx.jacobdrath.co">the homepage</a>.</p>
     <form action="delcn.html" method="get">
         <div class="g-recaptcha" data-sitekey="6LfB4ckfAAAAAJH3qOotGiFW1Munvvy_o9hC_8AU"></div>
         <input type="submit" value="Confirm">
