--- a/settings/index.html
+++ b/settings/index.html
@@ -17,7 +17,7 @@
     <li><a>Show temperature <input id="showTemp" type="checkbox" oninput="setTemp()"></a></li>
     <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
-    <li><a href="delete">Delete your data</a></li>
+    <li><a href="delete">Delete your data...</a></li>
 </ul>
 <script>
 
