--- a/settings/index.html
+++ b/settings/index.html
@@ -19,50 +19,7 @@
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data...</a></li>
 </ul>
-<script>
-
-  document.getElementById("showTemp").checked=(Boolean(Number(localStorage.getItem("showTemp"))))
-  function setTemp() {
-    localStorage.setItem("showTemp",Number(document.getElementById("showTemp").checked))
-    Toastify({
-            text: "Saved!",
-            style: {
-              background: "linear-gradient(to right, #00b09b, #96c93d)",
-            },
-            gravity: "bottom"
-          }).showToast();
-  }
-
-  document.getElementById("icon").checked=(Boolean(Number(localStorage.getItem("icon-show"))))
-  function setIcon() {
-    localStorage.setItem("icon-show",Number(document.getElementById("icon").checked))
-    Toastify({
-            text: "Saved!",
-            style: {
-              background: "linear-gradient(to right, #00b09b, #96c93d)",
-            },
-            gravity: "bottom"
-          }).showToast();
-  }
-  </script>
-<script>
-function myFunction() {
-    var input, filter, ul, li, a, i, txtValue;
-    input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
-    li = ul.getElementsByTagName("li");
-    for (i = 0; i < li.length; i++) {
-        a = li[i].getElementsByTagName("a")[0];
-        txtValue = a.textContent || a.innerText;
-        if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            li[i].style.display = "";
-        } else {
-            li[i].style.display = "none";
-        }
-    }
-}
-</script>
+<script src="main.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 </html>
