--- a/404.html
+++ b/404.html
@@ -8,7 +8,10 @@
         <link rel="icon" href="https://wx.jacobdrath.co/Logo.png">
     </head>
     <body style="font-family: sans-serif;">
-        <a href="https://wx.jacobdrath.co/">Simple Weather</a>/system/404.html
+        <script>
+            window.open("https://wx.jacobdrath.co?ref=404", "_self")
+        </script>
+        <!--<a href="https://wx.jacobdrath.co/">Simple Weather</a>/system/404.html
         <h1>Page Not Found!</h1>
         <h2>ERROR: 404</h2>
         <p id="rantxt"></p>
@@ -41,6 +44,6 @@
                 }, 50);
             }
             rantxt()
-        </script>
+        </script>-->
     </body>
 </html>
