--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
     <link rel="apple-touch-icon" href="Logo.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
+    <meta name="title" content="Simple Weather">
+    <meta name="description" content="With Simple Weather, you can see the weather explained in the most simple way.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Simple Weather">
+    <meta property="og:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Simple Weather">
+    <meta property="twitter:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
+    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 <body>
     <img src="Logo.png" width="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
