Added ability to remove mod

--- a/settings/mods/index.html
+++ b/settings/mods/index.html
@@ -15,6 +15,7 @@
     <ul id="myUL">
         <li><a>Please note that this feature is in beta, and may not work properly.</a></li>
         <li><a href="create.html">Create new mod...</a></li>
+        <li><a href="javascript:localStorage.removeItem('mod');alert('saved!')">Remove current mod...</a></li>
     </ul>
     <script src="/settings/main.js"></script>
 </body>
