--- a/settings/index.html
+++ b/settings/index.html
@@ -18,6 +18,7 @@
     <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data...</a></li>
+    <li><a href="https://www.twitter.com/Simple_WX" target="_blank"><img src="https://img.shields.io/badge/Twitter-%231DA1F2.svg?style=for-the-badge&logo=Twitter&logoColor=white&label=Follow Us&labelColor=0c7dc2"></a></li>
 </ul>
 <script src="main.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
