Changed load wheel

--- a/settings/unit.html
+++ b/settings/unit.html
@@ -21,7 +21,7 @@
         function save() {
             localStorage.setItem("unit", document.getElementById("unit").value)
             alert("Saved!")
-            document.body.innerHTML=("<center><img src='https://wx.jacobdrath.co/load.gif' width='50px'></center>")
+            document.body.innerHTML=("<center><img src='https://wx.jacobdrath.co/load.png' width='50px'></center>")
             window.open("https://wx.jacobdrath.co", "_self")
         }
     </script>
