--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Copyright (c) Jacob Drath 2022-->
 <!-- All "Simple Weather" items on this website are represented by Jacob Drath -->
-<!-- This Project (aka "Repository") is under closed copyright, And cannot be used for outside purposes. For more details please visit https://choosealicense.com/no-permission/ -->
+<!-- GNU Affero General Public License v3.0 -->
+<!-- See https://github.com/jacobd082/simple-wx/blob/main/LICENSE -->
 <!-- The weather on Simple Weather is sourced by OpenWeatherMaps API -->
 <!-- https://openweathermap.org -->
 <!-- All traffic from this site is encrypted, using HTTPS. -->
