Added basic modding

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
     <meta name="title" content="Simple Weather">
     <meta name="description" content="With Simple Weather, you can see the weather explained in the most simple way.">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap" rel="stylesheet">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
