--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 <body>
-    <img src="Small-Logo.png" width="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
+    <img src="Small-Logo.png" width="40px" height="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
     <center>
     <h1>The simplest weather app.</h1>
     <p>Simple Weather explains weather in simple terms that anyone can read!</p>
