--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://wxjacobdrath.co/">
     <meta property="og:title" content="Simple Weather">
     <meta property="og:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://wx.jacobdrath.co/headerimg.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://wxjacobdrath.co/">
     <meta property="twitter:title" content="Simple Weather">
     <meta property="twitter:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="https://wx.jacobdrath.co/headerimg.png">
 </head>
 <body>
     <img src="Small-Logo.png" width="40px" height="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
