--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Weather</title>
+    <title>Simple Weather: The most simple weather website.</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="Logo.png">
     <link rel="apple-touch-icon" href="Logo.png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--<script src="https://www.google.com/recaptcha/api.js" async defer></script>-->
-    <meta name="title" content="Simple Weather">
+    <meta name="title" content="Simple Weather: The most simple weather website.">
     <meta name="description" content="With Simple Weather, you can see the weather explained in the most simple way.">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -27,14 +27,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://wxjacobdrath.co/">
-    <meta property="og:title" content="Simple Weather">
+    <meta property="og:title" content="Simple Weather: The most simple weather website.">
     <meta property="og:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
     <meta property="og:image" content="https://wx.jacobdrath.co/headerimg.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://wxjacobdrath.co/">
-    <meta property="twitter:title" content="Simple Weather">
+    <meta property="twitter:title" content="Simple Weather: The most simple weather website.">
     <meta property="twitter:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
     <meta property="twitter:image" content="https://wx.jacobdrath.co/headerimg.png">
 </head>
