--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <meta property="twitter:title" content="Simple Weather: The most simple weather website.">
     <meta property="twitter:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
     <meta property="twitter:image" content="https://wx.jacobdrath.co/headerimg.png">
+    <meta property="twitter:creator" content="@Simple_WX">
+    <meta property="twitter:site" content="@Simple_WX">
 </head>
 <body>
     <img src="Small-Logo.png" width="40px" height="40px"><span style="font-size: 35px; margin: 0; padding: 0;">Simple Weather</span>
