--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <meta property="og:url" content="https://wxjacobdrath.co/">
     <meta property="og:title" content="Simple Weather: The most simple weather website.">
     <meta property="og:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
-    <meta property="og:image" content="https://wx.jacobdrath.co/headerimg.png">
+    <meta property="og:image" content="https://wx.jacobdrath.co/headerimg.png?4362984378">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://wxjacobdrath.co/">
     <meta property="twitter:title" content="Simple Weather: The most simple weather website.">
     <meta property="twitter:description" content="With Simple Weather, you can see the weather explained in the most simple way.">
-    <meta property="twitter:image" content="https://wx.jacobdrath.co/headerimg.png">
+    <meta property="twitter:image" content="https://wx.jacobdrath.co/headerimg.png?4362984378">
     <meta property="twitter:creator" content="@Simple_WX">
     <meta property="twitter:site" content="@Simple_WX">
 </head>
