--- a/settings/index.html
+++ b/settings/index.html
@@ -16,6 +16,9 @@
     <li><a onclick="document.getElementById('icon').click()">Show weather icon <input id="icon" type="checkbox" oninput="setIcon()"></a></li>
     <li><a onclick="document.getElementById('showTemp').click()">Show temperature <input id="showTemp" type="checkbox" oninput="setTemp()"></a></li>
     <li><a onclick="document.getElementById('showBG').click()">Dynamic Background <input id="showBG" type="checkbox" oninput="setBG()"></a></li>
+    <div id="bg-opt">
+      <li><a onclick="document.getElementById('AniBG').click()">Animated Background <input id="AniBG" type="checkbox" oninput="setBGA()"></a></li>
+    </div>
     <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
     <li><a href="delete">Delete your data...</a></li>
