Added the ability to have text background

--- a/settings/index.html
+++ b/settings/index.html
@@ -18,6 +18,7 @@
     <li><a onclick="document.getElementById('showBG').click()">Dynamic Background <input id="showBG" type="checkbox" oninput="setBG()"></a></li>
     <div id="bg-opt">
       <li><a onclick="document.getElementById('AniBG').click()">Animated Background <input id="AniBG" type="checkbox" oninput="setBGA()"></a></li>
+      <li><a onclick="document.getElementById('txtBG').click()">Text Background <input id="txtBG" type="checkbox" oninput="txtBG()"></a></li>
     </div>
     <li><a href="https://github.com/jacobd082/wx/">Open Source</a></li>
     <li><a href="https://wx.jacobdrath.co/conditions">See conditions guide...</a></li>
